--- a/style.css
+++ b/style.css
@@ -80,20 +80,7 @@ a:hover {
     background: top no-repeat;
 }
 
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
 
-.texture-paper::before {
-    background: url("img/texture-paper.webp");
-    background-size: 280px 280px;
-}
 
 .b-parallax {
     background-attachment: fixed;
@@ -315,13 +302,6 @@ a:hover {
     margin: 0;
 }
 
-.navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
-    float: right;
-    z-index: 1;
-}
-
 .nav > li {
     float: left;
     margin-top: 4px;
@@ -360,6 +340,27 @@ a:hover {
     float: right;
     position: relative;
     z-index: 2;
+}
+
+.site-navigation ul li {
+    text-decoration: none;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.accueil{
+    padding-left: 0px;
+    padding-right: 10px;
+}
+
+.nav-contact {
+    padding: 30px 10px 30px 10px;
+}
+.accueil a {
+    text-decoration: none;
 }
 
 @media (min-width: 768px) {
@@ -508,6 +509,7 @@ button {
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    width: 300px;
 }
 
 .scrollToTop {
@@ -660,10 +662,14 @@ a {
 
 .hero-bloc-text {
     font-size: 38px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .hero-bloc-text-sub {
     font-size: 36px;
+
 }
 
 .statement-bloc-text {
@@ -683,6 +689,9 @@ p {
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .h1 {
@@ -775,7 +784,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFF!important;
 }
 
 .btn-atomic-tangerine {
@@ -1038,5 +1047,51 @@ h4 {
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
+    }
+}
+
+.bloc-images img {
+    
+    width: 400px;
+    margin: auto;
+}
+.images-1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 10px;
+    padding-top: 40px;
+}
+.images-1 div {
+    width: 400px;
+}
+.images-2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 40px;
+}
+.images-2 div {
+    width: 400px;
+}
+
+.bloc-images h3, p {
+    text-align: center;
+}
+@media (max-width: 840px) {
+    .images-1 {
+        display: block;
+    }
+    .images-2 {
+        display: block;
+    }
+    .images-1 div {
+        width: 100%;
+    }
+    .images-2 div {
+        width: 100%;
+    }
+    .bloc-images img {
+        width: 70%;
     }
 }
