--- a/style.css
+++ b/style.css
@@ -682,9 +682,7 @@ a {
     margin: auto auto auto auto;
 }
 
-p {
-    font-size: 11px;
-}
+
 
 .tight-width-whitespace {
     max-width: 600px;
@@ -719,7 +717,7 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 18px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
@@ -1050,6 +1048,18 @@ h4 {
     }
 }
 
+    /*  Modif Responsive    */
+
+
+
+.titre-images h3 {
+    font-size: 22px;
+    text-align: center;
+    padding: 30px 30px 0px 30px;
+    
+
+}
+
 .bloc-images img {
     
     width: 400px;
@@ -1060,7 +1070,7 @@ h4 {
     flex-wrap: wrap;
     justify-content: space-around;
     padding-bottom: 10px;
-    padding-top: 40px;
+    padding-top: 60px;
 }
 .images-1 div {
     width: 400px;
@@ -1077,7 +1087,10 @@ h4 {
 
 .bloc-images h3, p {
     text-align: center;
+
 }
+
+
 @media (max-width: 840px) {
     .images-1 {
         display: block;
