luminosité et responsive

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ a:hover {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
-    padding: 0 50px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -87,11 +86,11 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: white;
 }
 
 .d-bloc button:hover {
-    color: rgba(255, 255, 255, .9);
+    color:white;
 }
 
 .d-bloc .icon-round,
@@ -99,7 +98,7 @@ a:hover {
 .d-bloc .icon-rounded,
 .d-bloc .icon-semi-rounded-a,
 .d-bloc .icon-semi-rounded-b {
-    border-color: rgba(255, 255, 255, .9);
+    border-color: white;
 }
 
 .d-bloc .divider-h span {
@@ -120,7 +119,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: white;
 }
 
 .d-bloc .a-btn:hover,
@@ -695,10 +694,12 @@ a {
 }
 
 .cta-hero {
+    width: 300px;
+    padding: 10px 30px 10px 30px;
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
+    border-radius: 10px;
     font-size: 16px;
     font-weight: 700;
 }
@@ -740,7 +741,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: white;
 }
 
 .portfolio-thumb {
@@ -1041,6 +1042,33 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+.modif {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    padding-bottom: 20px;
+    font-size: 18px;
+}
+
+.col-sm-6 {
+    text-align: center;
+    width: 100%;
+}
+
+.center a {
+    display: flex;
+    justify-content: center;
+}
+.text-center {
+    display: block;
+}
+
+span {
+    font-family: helvetica;
+    display: flex;
+    justify-content: center;
 }
 
     /*  Modif Responsive    */
